--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/danicadombek/express-start#readme",
   "dependencies": {
-    "express": "^5.0.0-alpha.8"
+    "express": "^5.0.0-alpha.8",
+    "morgan": "^1.10.0"
   }
 }
